--- a/www/index.html
+++ b/www/index.html
@@ -30,7 +30,7 @@
         <title>IASS</title>
 
     </head>
-    <body>
+    <body onLoad="javascript:location='http://iass.info/'">
 	
 	<div style="box-sizing:border-box;width:100%;height:100%;">
     <iframe src="http://iass.info/" width="100%" height="100%" border="0" style="position: absolute;border:0px;height:100%;"></iframe>
