--- a/www/index.html
+++ b/www/index.html
@@ -28,7 +28,8 @@
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
         <title>IASS</title>
-
+<meta http-equiv="refresh"
+   content="0; url=http://iass.info/">
     </head>
     <body onLoad="javascript:location='http://iass.info/'">
 	
