--- a/www/index.html
+++ b/www/index.html
@@ -28,13 +28,19 @@
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
         <title>IASS</title>
-<meta http-equiv="refresh"
-   content="0; url=http://iass.info/">
     </head>
-    <body onLoad="javascript:location='http://iass.info/'">
-	
-	<div style="box-sizing:border-box;width:100%;height:100%;">
-    <iframe src="http://iass.info/" width="100%" height="100%" border="0" style="position: absolute;border:0px;height:100%;"></iframe>
+    <body>
+		<script>
+	$.ajax({
+   url: "http://iass.info/index.php",
+   success: function(x){
+      $("#results").html(x);
+   }
+});
+</script>
+
+	<div id="results" style="box-sizing:border-box;width:100%;height:100%;">
+    
 	</div>
     <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
