--- a/www/index.html
+++ b/www/index.html
@@ -30,17 +30,9 @@
         <title>IASS</title>
     </head>
     <body>
-		<script>
-	$.ajax({
-   url: "http://iass.info/index.php",
-   success: function(x){
-      $("#results").html(x);
-   }
-});
-</script>
-
-	<div id="results" style="box-sizing:border-box;width:100%;height:100%;">
-    
+	
+	<div style="box-sizing:border-box;width:100%;height:100%;">
+    <iframe src="http://iass.info/" border="0" style="position: absolute;border:0px;width:100%;height:100%;"></iframe>
 	</div>
     <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
