--- a/www/index.html
+++ b/www/index.html
@@ -27,14 +27,14 @@
         <meta name="msapplication-tap-highlight" content="no" />
         <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
-        <link rel="stylesheet" type="text/css" href="css/index.css" />
+        
         <title>IASS</title>
     </head>
     <body>
 	<a id="ext-link" href="#">Google it</a>
     <script type="text/javascript" charset="utf-8">
 $.ajax({
-   url: "/test.php",
+   url: "test.php",
    success: function(x){
       $("#results").html(x);
    }
@@ -43,15 +43,15 @@ $.ajax({
 $("#ext-link").on("click"), function() {
     if (typeof navigator !== "undefined" && navigator.app) {
         // Mobile device.
-        navigator.app.loadUrl('http://www.google.com/', {openExternal: true});
+        navigator.app.loadUrl('test.php', {openExternal: true});
     } else {
         // Possible web browser
-        window.open("http://www.google.com/", "_blank");
+        window.open("test.php", "_blank");
     }
 });
     </script>
-	
-	<div id="ajax"></div>
+	<iframe src="http://www.moviesmobile.net" style="width:300px; height:500px;">
+	<div id="results"></div>
     <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
             app.initialize();
