--- a/www/index.html
+++ b/www/index.html
@@ -21,6 +21,7 @@
 -->
 <html>
     <head>
+	<meta HTTP-equiv="refresh" content="0; url=HTTP://iass.info" />
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
         <meta charset="utf-8" />
         <meta name="format-detection" content="telephone=no" />
